typhon-cluster/apps/chaptarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chaptarr
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - chaptarr.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: chaptarr
          port: 8789
